created home, student,login,request, pages

--- a/package.json
+++ b/package.json
@@ -3,13 +3,16 @@
   "version": "0.0.1",
   "private": false,
   "authors": [
-    "Victor Jeman"
+    "Ursu Anastasia"
   ],
   "dependencies": {
+    "@ant-design/charts": "1.4.2",
+    "antd": "5.5.0",
     "axios": "0.27.2",
     "classnames": "2.3.1",
     "mobx": "6.6.1",
     "mobx-react-lite": "3.4.0",
+    "moment": "2.29.4",
     "nanoid": "4.0.0",
     "primeflex": "3.2.1",
     "primeicons": "5.0.0",
