added package-lock.json in .gitignore

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "academy-react-skeleton-app",
+  "name": "student-certificate",
   "version": "0.0.1",
   "private": false,
   "authors": [
