--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "antd": "5.5.0",
     "axios": "0.27.2",
+    "chart.js": "4.3.0",
     "classnames": "2.3.1",
     "mobx": "6.6.1",
     "mobx-react-lite": "3.4.0",
@@ -17,6 +18,7 @@
     "primeicons": "5.0.0",
     "primereact": "8.3.0",
     "react": "18.2.0",
+    "react-chartjs-2": "5.2.0",
     "react-dom": "18.2.0",
     "react-router-dom": "6.3.0",
     "react-scripts": "5.0.1",
