--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "Ursu Anastasia"
   ],
   "dependencies": {
+    "@reduxjs/toolkit": "1.9.5",
+    "@types/react-redux": "7.1.25",
     "antd": "5.5.0",
     "axios": "0.27.2",
     "chart.js": "4.3.0",
@@ -21,6 +23,7 @@
     "react-chartjs-2": "5.2.0",
     "react-dom": "18.2.0",
     "react-icons": "4.8.0",
+    "react-redux": "8.0.5",
     "react-router-dom": "6.3.0",
     "react-scripts": "5.0.1",
     "react-use": "17.4.0",
